# celery-redis-email-service

./: .env  .gitignore  Dockerfile  README.md  celery_app.py  docker-compose.yml  main.py  pyproject.toml  start.md  tasks.py
